# d120-wagtail

./: README.md  pyproject.toml
d120_wagtail/: Dockerfile  manage.py
d120_wagtail/d120/: wsgi.py
d120_wagtail/d120/settings/: base.py  dev.py
d120_wagtail/d120/templates/: base.html
